Update images and vow text in index.html
Updated image sources and modified vow text for clarity and personalization.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <div id="step1" class="card hidden">
             <div class="photo-frame">
-                <img src="image_14.png" alt="Fun Times">
+                <img src="IMG_3400.jpg" alt="Fun Times">
             </div>
             <h1>Vow #1: Fun & Joy</h1>
             <p>I promise to always celebrate life with you, from big moments to small joys. You are my happiness! 🎉</p>
@@ -197,7 +197,7 @@
 
         <div id="step2" class="card hidden">
             <div class="photo-frame" style="transform: rotate(2deg);">
-                <img src="image_15.png" alt="My Princess">
+                <img src="IMG_3395.jpg" alt="My Princess">
             </div>
             <h1>Vow #2: To Support</h1>
             <p>I promise to be your biggest fan, to support your dreams, and to always treat you like my Queen. 👑</p>
@@ -206,7 +206,7 @@
 
         <div id="step3" class="card hidden">
             <div class="photo-frame" style="transform: rotate(-3deg);">
-                <img src="image_16.png" alt="Sweet Moments">
+                <img src="IMG_3405.jpg" alt="Sweet Moments">
             </div>
             <h1>Vow #3: Patience</h1>
             <p>I promise to be patient, to feed you cake (and love!), and to handle all your moods with a smile. 🍰😊</p>
@@ -215,7 +215,7 @@
 
         <div id="step4" class="card hidden">
             <div class="photo-frame" style="transform: rotate(1deg);">
-                <img src="image_17.png" alt="Beautiful">
+                <img src="IMG_3393.jpg" alt="Beautiful">
             </div>
             <h1>Vow #4: Hype Man</h1>
             <p>I promise to always admire your beauty, inside and out. You will always be the most beautiful woman to me. 🌹💃</p>
@@ -224,7 +224,7 @@
 
         <div id="step5" class="card hidden">
             <div class="photo-frame" style="transform: rotate(-2deg);">
-                <img src="image_18.png" alt="Together">
+                <img src="IMG_3397.jpg" alt="Together">
             </div>
             <h1>Vow #5: Teamwork</h1>
             <p>I promise that we will always be a team. No matter what life throws at us, we face it together. 🤝❤️</p>
@@ -233,7 +233,7 @@
 
         <div id="step6" class="card hidden">
             <div class="photo-frame" style="transform: rotate(3deg);">
-                <img src="image_19.png" alt="Comfort">
+                <img src="IMG_3406.jpg" alt="Comfort">
             </div>
             <h1>Vow #6: Comfort</h1>
             <p>I promise to be your safe space, your comfort zone, and the eyes that always look at you with love. 🤗✨</p>
@@ -251,10 +251,10 @@
 
         <div id="step8" class="card hidden">
             <div class="photo-frame" style="transform: rotate(-2deg);">
-                <img src="promise8.jpg" alt="Hug">
+                <img src="IMG_20250620_220004.jpg" alt="Hand in Hand">
             </div>
             <h1>Vow #8: Forever</h1>
-            <p>I promise to hold you tight, to be your strength, and to love you until the very end of time. 🫂❤️</p>
+            <p>I promise to hold your hand tight, to be your strength, and to love you until the very end of time. 🫂❤️</p>
             <button class="btn" onclick="nextStep(9)">My Final Vow... 💫</button>
         </div>
 
@@ -262,7 +262,7 @@
             <div class="certificate">
                 <h2 style="font-family: 'Dancing Script'; margin:0; color:#d4af37; font-size: 2rem;">Certificate of Promise</h2>
                 <p style="color:#333; font-size:1rem; margin: 20px 0; line-height: 1.6;">
-                    This certifies that<br><b>Betu (Shivangi)</b><br>owns Guplu's heart and these 8 promises forever.
+                    This certifies that<br><b>Betu</b><br>owns Guplu's heart and these 8 promises forever.
                 </p>
                 <div style="text-align: right; font-family: 'Dancing Script'; color: #555; font-size: 1.3rem;">
                     Signed,<br><b>Your Guplu 🖊️</b>
@@ -278,7 +278,7 @@
                 "Hold me so tight...<br>
                 that even air cannot pass between us."
             </p>
-            <p style="font-size: 1rem; opacity: 0.8;">I love you, Betu.</p>
+            <p style="font-size: 1.1rem; opacity: 0.9; color: #ff7eb3; font-weight: 600;">I love you mera betu mera bacha, mera dulara mera laado. ❤️</p>
         </div>
 
     </div>
