Update title and text for Valentine's Day theme

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promises For Betu ❤️</title>
+    <title>Happy Valentine's Day Betu ❤️</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;500;600&display=swap');
 
         body {
             margin: 0;
             padding: 0;
-            background: radial-gradient(circle at center, #2c3e50, #000000); /* Deep Blue/Black for a premium feel */
+            background: radial-gradient(circle at center, #2c3e50, #000000); 
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -75,7 +75,7 @@
         h1 {
             font-family: 'Dancing Script', cursive;
             font-size: 2.4rem;
-            color: #ff7eb3; /* Soft Pink */
+            color: #ff7eb3; 
             margin: 0 0 15px 0;
             text-shadow: 0 2px 5px rgba(0,0,0,0.5);
         }
@@ -87,7 +87,7 @@
             color: #f0f0f0;
         }
 
-        /* Photo Frame Style (Polaroid Look) */
+        /* Photo Frame Style */
         .photo-frame {
             background: white;
             padding: 10px 10px 35px 10px; 
@@ -181,14 +181,14 @@
     <div class="container">
 
         <div id="step0" class="card">
-            <h1>Promise Day 🤞</h1>
-            <p>Betu, these photos are proof of our beautiful moments.<br>Today, I make 8 lifetime promises to you.</p>
+            <h1>Happy Valentine's Day ❤️</h1>
+            <p>Betu, these photos are proof of our beautiful moments.<br>Today, I make 8 lifetime vows to you.</p>
             <button class="btn" onclick="startPromises()">Tap to Begin ❤️</button>
         </div>
 
         <div id="step1" class="card hidden">
             <div class="photo-frame">
-                <img src="IMG_3400.jpg" alt="Fun Times">
+                <img src="image_14.jpg" alt="Fun Times">
             </div>
             <h1>Vow #1: Fun & Joy</h1>
             <p>I promise to always celebrate life with you, from big moments to small joys. You are my happiness! 🎉</p>
@@ -197,7 +197,7 @@
 
         <div id="step2" class="card hidden">
             <div class="photo-frame" style="transform: rotate(2deg);">
-                <img src="IMG_3395.jpg" alt="My Princess">
+                <img src="image_15.jpg" alt="My Princess">
             </div>
             <h1>Vow #2: To Support</h1>
             <p>I promise to be your biggest fan, to support your dreams, and to always treat you like my Queen. 👑</p>
@@ -206,7 +206,7 @@
 
         <div id="step3" class="card hidden">
             <div class="photo-frame" style="transform: rotate(-3deg);">
-                <img src="IMG_3405.jpg" alt="Sweet Moments">
+                <img src="image_16.jpg" alt="Sweet Moments">
             </div>
             <h1>Vow #3: Patience</h1>
             <p>I promise to be patient, to feed you cake (and love!), and to handle all your moods with a smile. 🍰😊</p>
@@ -215,7 +215,7 @@
 
         <div id="step4" class="card hidden">
             <div class="photo-frame" style="transform: rotate(1deg);">
-                <img src="IMG_3393.jpg" alt="Beautiful">
+                <img src="image_17.jpg" alt="Beautiful">
             </div>
             <h1>Vow #4: Hype Man</h1>
             <p>I promise to always admire your beauty, inside and out. You will always be the most beautiful woman to me. 🌹💃</p>
@@ -224,7 +224,7 @@
 
         <div id="step5" class="card hidden">
             <div class="photo-frame" style="transform: rotate(-2deg);">
-                <img src="IMG_3397.jpg" alt="Together">
+                <img src="image_18.jpg" alt="Together">
             </div>
             <h1>Vow #5: Teamwork</h1>
             <p>I promise that we will always be a team. No matter what life throws at us, we face it together. 🤝❤️</p>
@@ -233,7 +233,7 @@
 
         <div id="step6" class="card hidden">
             <div class="photo-frame" style="transform: rotate(3deg);">
-                <img src="IMG_3406.jpg" alt="Comfort">
+                <img src="image_19.jpg" alt="Comfort">
             </div>
             <h1>Vow #6: Comfort</h1>
             <p>I promise to be your safe space, your comfort zone, and the eyes that always look at you with love. 🤗✨</p>
@@ -242,7 +242,7 @@
 
         <div id="step7" class="card hidden">
             <div class="photo-frame">
-                <img src="promise7.jpg" alt="Kiss">
+                <img src="image_20.jpg" alt="Romance">
             </div>
             <h1>Vow #7: Romance</h1>
             <p>I promise to keep the romance alive, to kiss you goodnight, and to remind you every day how much I love you. 😘</p>
@@ -251,7 +251,7 @@
 
         <div id="step8" class="card hidden">
             <div class="photo-frame" style="transform: rotate(-2deg);">
-                <img src="IMG_20250620_220004.jpg" alt="Hand in Hand">
+                <img src="promise5.jpg" alt="Forever">
             </div>
             <h1>Vow #8: Forever</h1>
             <p>I promise to hold your hand tight, to be your strength, and to love you until the very end of time. 🫂❤️</p>
@@ -260,9 +260,9 @@
 
         <div id="step9" class="card hidden">
             <div class="certificate">
-                <h2 style="font-family: 'Dancing Script'; margin:0; color:#d4af37; font-size: 2rem;">Certificate of Promise</h2>
+                <h2 style="font-family: 'Dancing Script'; margin:0; color:#d4af37; font-size: 2rem;">Certificate of Vows</h2>
                 <p style="color:#333; font-size:1rem; margin: 20px 0; line-height: 1.6;">
-                    This certifies that<br><b>Betu</b><br>owns Guplu's heart and these 8 promises forever.
+                    This certifies that<br><b>Betu</b><br>owns Guplu's heart and these 8 vows forever.
                 </p>
                 <div style="text-align: right; font-family: 'Dancing Script'; color: #555; font-size: 1.3rem;">
                     Signed,<br><b>Your Guplu 🖊️</b>
@@ -273,7 +273,7 @@
 
         <div id="step10" class="card hidden">
             <span class="heartbeat">❤️</span>
-            <h1>Be My Forever</h1>
+            <h1>Be My Valentine</h1>
             <p style="font-size: 1.2rem; font-weight: 500; margin-top: 20px;">
                 "Hold me so tight...<br>
                 that even air cannot pass between us."
